fixed wrapping bug

--- a/tailwind-playground/style/style.css
+++ b/tailwind-playground/style/style.css
@@ -233,7 +233,7 @@ body {
 
 /* List Of X */
 .table {
-  margin: 4rem;
+  margin: 3rem;
   font-size: 2rem;
   overflow: auto;
   background-color: #35353525;
@@ -273,21 +273,21 @@ body {
   overflow: auto;
 }
 
+.table .card {
+  width: 100%;
+}
 .table__row.action-hidden .card {
   overflow: hidden;
   max-height: 0;
   padding: 0;
   border: 0;
   opacity: 0;
-
-  padding-left: 10rem;
 }
 
 .row-action--expanded .card {
   margin-top: 2rem;
   max-height: 400px;
   border: 0;
-  margin: 3rem;
   opacity: 1;
 }
 
@@ -315,5 +315,24 @@ body {
 
   .table .card {
     margin: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .table .card {
+    margin: 3rem 5rem;
+  }
+  .table {
+    margin: 3rem 10rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .table .card {
+    margin: 3rem 15rem;
+  }
+
+  .table {
+    margin: 3rem 20rem;
   }
 }
